fixed font & spacing issues on speaker card

--- a/src/components/speakers-grid.module.css
+++ b/src/components/speakers-grid.module.css
@@ -16,7 +16,7 @@
 
 .grid {
   margin: 40px auto;
-  padding: 0 24px;
+  padding: 0;
   width: 100%;
   min-width: 300px;
   display: grid;
@@ -26,11 +26,6 @@
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: none;
   scrollbar-width: none;
-}
-@media (min-width: 768px) {
-  .grid {
-    padding: 0 var(--space-8x);
-  }
 }
 @media (max-width: 1280px) {
   .grid {
@@ -62,7 +57,6 @@
   display: block;
   border-radius: var(--space-2x);
   border: 1px solid #333333;
-  padding: 1px;
   transition: border 0.3s;
 }
 
@@ -72,7 +66,7 @@
 }
 
 .cardBody {
-  padding: var(--space-4x);
+  padding: var(--space-6x);
   color: var(--secondary-color);
   display: flex;
   flex-direction: column;
@@ -81,7 +75,7 @@
 }
 
 .imageWrapper {
-  height: 207px;
+  height: 280px;
   position: relative;
 }
 
@@ -110,10 +104,10 @@
 }
 
 .name {
-  font-family: "ivypresto-display";
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #f1f1f1;
+  font-family: "PPHatton";
+  letter-spacing: -0.07em;
+  text-transform: capitalize;
+  color: var(--c-gray-2);
   font-size: 24px;
   font-weight: 400;
   margin: 0;
@@ -121,8 +115,10 @@
 }
 
 .tagline {
-  font-family: "jaf-lapture";
-  font-size: 17px;
+  font-family: "Helvetica Neue";
+  font-size: 20px;
   margin: 0;
-  line-height: 1.6rem;
+  line-height: 1.3em;
+  color: var(--c-gray-3);
+  font-weight: 400;
 }
